  - Enhanced the config option "freesizecap" to allow
    the setting "fixed" which is the same as "false",
    and a new setting "relative" is added, which will
    be similar to the setting "fixed" but the reported
    free disk size will also change relative to the
    change of the free disk size ever since. (Wengier)
  - Added support for OPUS CD tracks by porting and
    cleaning up the code from other projects. (Wengier)
  - Support for FluidSynth MIDI Synthesizer is now
    included in the MinGW builds by default just like
    Visual Studio builds. Set "mididevice=fluidsynth"
    and a soundfont file to use it. (Wengier)
  - Added menu item "Show Sound Blaster configuration"
    under "Sound" menu to show the current information
    about Sound Blaster, and also menu item "Show MIDI
    device configuration" (also under "Sound" menu)
    to show information about the current MIDI device
    such as the soundfont file in use. (Wengier)
  - Added "Mount multiple disk/CD images" option to the
    mounting options of the Drive menu to allow users
    to mount more than one disk/CD images to a drive,
    swappable from the menu. (Wengier)
  - Added new CPU types to the "Emulate CPU speed" menu
    group namely 286-25MHz, 386DX-25MHz, 486DX4-100MHz,
    486DX5-133MHz, Pentium-60MHz, Pentium-75MHz, and
    Pentium-90MHz. Thanks again for the data provided
    by the user maximus105. (Wengier)
  - You can now select a special key (e.g. Alt+Tab,
    Ctrl+Break, Ctrl+Alt+Del, etc) to be sent from the
    key defined in the mapper editor. The key can be
    selected (Ctrl+Alt+Del by default) from the "Send
    special key" menu group in "Main" menu. (Wengier)
  - Added full Ctrl+Break emulation at the BIOS and
    DOS level, updated console emulation to match.
    The "Pause" mapper shortcut is now moved to
    HOST[F11/F12]+Pause instead of Ctrl+Pause so that
    Ctrl+Break can work properly for users, and the
    function to send the Ctrl+Break key from the menu