@@ -6,7 +6,7 @@
  *   - dr_libs: https://github.com/mackron/dr_libs (source)
  *   - dr_wav: http://mackron.github.io/dr_wav.html (website)
  *
- *  Copyright (C) 2020       The dosbox-staging team
+ *  Copyright (C) 2020       The DOSBox Staging Team
  *  Copyright (C) 2018-2019  Kevin R. Croft <krcroft@gmail.com>
  *  Copyright (C) 2001-2017  Ryan C. Gordon <icculus@icculus.org>
  *
